InSCAPE/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/gisdefs.h


int G_make_bgyr_colors(struct Colors *, CELL, CELL);

int G_make_bgyr_fp_colors(struct Colors *, DCELL, DCELL);

int G_make_byg_colors(struct Colors *, CELL, CELL);

int G_make_byg_fp_colors(struct Colors *, DCELL, DCELL);

int G_make_grey_scale_colors(struct Colors *, CELL, CELL);

int G_make_grey_scale_fp_colors(struct Colors *, DCELL, DCELL);

int G_make_gyr_colors(struct Colors *, CELL, CELL);

int G_make_gyr_fp_colors(struct Colors *, DCELL, DCELL);

int G_make_rainbow_colors(struct Colors *, CELL, CELL);

int G_make_rainbow_fp_colors(struct Colors *, DCELL, DCELL);

int G_make_ramp_colors(struct Colors *, CELL, CELL);

int G_make_ramp_fp_colors(struct Colors *, DCELL, DCELL);

int G_make_wave_colors(struct Colors *, CELL, CELL);

int G_make_wave_fp_colors(struct Colors *, DCELL, DCELL);


/* color_free.c */
int G_free_colors(struct Colors *);

int G__color_free_rules(struct _Color_Info_ *);

int G__color_free_lookup(struct _Color_Info_ *);

int G__color_free_fp_lookup(struct _Color_Info_ *);

int G__color_reset(struct Colors *);


/* color_get.c */
int G_get_color(CELL, int *, int *, int *, struct Colors *);

int G_get_raster_color(const void *, int *, int *, int *, struct Colors *,
		       RASTER_MAP_TYPE);

int G_get_c_raster_color(const CELL *, int *, int *, int *, struct Colors *);

int G_get_f_raster_color(const FCELL *, int *, int *, int *, struct Colors *);

int G_get_d_raster_color(const DCELL *, int *, int *, int *, struct Colors *);

int G_get_null_value_color(int *, int *, int *, const struct Colors *);

int G_get_default_color(int *, int *, int *, const struct Colors *);


/* color_hist.c */
int G_make_histogram_eq_colors(struct Colors *, struct Cell_stats *);

int G_make_histogram_log_colors(struct Colors *, struct Cell_stats *, int,
				int);


/* color_init.c */
int G_init_colors(struct Colors *);


/* color_insrt.c */
int G__insert_color_into_lookup(CELL, int, int, int, struct _Color_Info_ *);


/* color_invrt.c */
int G_invert_colors(struct Colors *);


/* color_look.c */
int G_lookup_colors(const CELL *, unsigned char *, unsigned char *,
		    unsigned char *, unsigned char *, int, struct Colors *);