OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/gis.py


# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 237
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_bgyr_colors'):
    G_make_bgyr_colors = _libs['grass_gis.6.4.2RC2'].G_make_bgyr_colors
    G_make_bgyr_colors.restype = c_int
    G_make_bgyr_colors.argtypes = [POINTER(struct_Colors), CELL, CELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 238
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_bgyr_fp_colors'):
    G_make_bgyr_fp_colors = _libs['grass_gis.6.4.2RC2'].G_make_bgyr_fp_colors
    G_make_bgyr_fp_colors.restype = c_int
    G_make_bgyr_fp_colors.argtypes = [POINTER(struct_Colors), DCELL, DCELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 239
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_byg_colors'):
    G_make_byg_colors = _libs['grass_gis.6.4.2RC2'].G_make_byg_colors
    G_make_byg_colors.restype = c_int
    G_make_byg_colors.argtypes = [POINTER(struct_Colors), CELL, CELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 240
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_byg_fp_colors'):
    G_make_byg_fp_colors = _libs['grass_gis.6.4.2RC2'].G_make_byg_fp_colors
    G_make_byg_fp_colors.restype = c_int
    G_make_byg_fp_colors.argtypes = [POINTER(struct_Colors), DCELL, DCELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 241
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_grey_scale_colors'):
    G_make_grey_scale_colors = _libs['grass_gis.6.4.2RC2'].G_make_grey_scale_colors
    G_make_grey_scale_colors.restype = c_int
    G_make_grey_scale_colors.argtypes = [POINTER(struct_Colors), CELL, CELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 242
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_grey_scale_fp_colors'):
    G_make_grey_scale_fp_colors = _libs['grass_gis.6.4.2RC2'].G_make_grey_scale_fp_colors
    G_make_grey_scale_fp_colors.restype = c_int
    G_make_grey_scale_fp_colors.argtypes = [POINTER(struct_Colors), DCELL, DCELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 243
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_gyr_colors'):
    G_make_gyr_colors = _libs['grass_gis.6.4.2RC2'].G_make_gyr_colors
    G_make_gyr_colors.restype = c_int
    G_make_gyr_colors.argtypes = [POINTER(struct_Colors), CELL, CELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 244
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_gyr_fp_colors'):
    G_make_gyr_fp_colors = _libs['grass_gis.6.4.2RC2'].G_make_gyr_fp_colors
    G_make_gyr_fp_colors.restype = c_int
    G_make_gyr_fp_colors.argtypes = [POINTER(struct_Colors), DCELL, DCELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 245
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_rainbow_colors'):
    G_make_rainbow_colors = _libs['grass_gis.6.4.2RC2'].G_make_rainbow_colors
    G_make_rainbow_colors.restype = c_int
    G_make_rainbow_colors.argtypes = [POINTER(struct_Colors), CELL, CELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 246
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_rainbow_fp_colors'):
    G_make_rainbow_fp_colors = _libs['grass_gis.6.4.2RC2'].G_make_rainbow_fp_colors
    G_make_rainbow_fp_colors.restype = c_int
    G_make_rainbow_fp_colors.argtypes = [POINTER(struct_Colors), DCELL, DCELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 247
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_ramp_colors'):
    G_make_ramp_colors = _libs['grass_gis.6.4.2RC2'].G_make_ramp_colors
    G_make_ramp_colors.restype = c_int
    G_make_ramp_colors.argtypes = [POINTER(struct_Colors), CELL, CELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 248
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_ramp_fp_colors'):
    G_make_ramp_fp_colors = _libs['grass_gis.6.4.2RC2'].G_make_ramp_fp_colors
    G_make_ramp_fp_colors.restype = c_int
    G_make_ramp_fp_colors.argtypes = [POINTER(struct_Colors), DCELL, DCELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 249
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_wave_colors'):
    G_make_wave_colors = _libs['grass_gis.6.4.2RC2'].G_make_wave_colors
    G_make_wave_colors.restype = c_int
    G_make_wave_colors.argtypes = [POINTER(struct_Colors), CELL, CELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 250
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_wave_fp_colors'):
    G_make_wave_fp_colors = _libs['grass_gis.6.4.2RC2'].G_make_wave_fp_colors
    G_make_wave_fp_colors.restype = c_int
    G_make_wave_fp_colors.argtypes = [POINTER(struct_Colors), DCELL, DCELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 253
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_free_colors'):
    G_free_colors = _libs['grass_gis.6.4.2RC2'].G_free_colors
    G_free_colors.restype = c_int
    G_free_colors.argtypes = [POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 254
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__color_free_rules'):
    G__color_free_rules = _libs['grass_gis.6.4.2RC2'].G__color_free_rules
    G__color_free_rules.restype = c_int
    G__color_free_rules.argtypes = [POINTER(struct__Color_Info_)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 255
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__color_free_lookup'):
    G__color_free_lookup = _libs['grass_gis.6.4.2RC2'].G__color_free_lookup
    G__color_free_lookup.restype = c_int
    G__color_free_lookup.argtypes = [POINTER(struct__Color_Info_)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 256
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__color_free_fp_lookup'):
    G__color_free_fp_lookup = _libs['grass_gis.6.4.2RC2'].G__color_free_fp_lookup
    G__color_free_fp_lookup.restype = c_int
    G__color_free_fp_lookup.argtypes = [POINTER(struct__Color_Info_)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 257
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__color_reset'):
    G__color_reset = _libs['grass_gis.6.4.2RC2'].G__color_reset
    G__color_reset.restype = c_int
    G__color_reset.argtypes = [POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 260
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_color'):
    G_get_color = _libs['grass_gis.6.4.2RC2'].G_get_color
    G_get_color.restype = c_int
    G_get_color.argtypes = [CELL, POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 261
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_raster_color'):
    G_get_raster_color = _libs['grass_gis.6.4.2RC2'].G_get_raster_color
    G_get_raster_color.restype = c_int
    G_get_raster_color.argtypes = [POINTER(None), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(struct_Colors), RASTER_MAP_TYPE]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 263
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_c_raster_color'):
    G_get_c_raster_color = _libs['grass_gis.6.4.2RC2'].G_get_c_raster_color
    G_get_c_raster_color.restype = c_int
    G_get_c_raster_color.argtypes = [POINTER(CELL), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 264
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_f_raster_color'):
    G_get_f_raster_color = _libs['grass_gis.6.4.2RC2'].G_get_f_raster_color
    G_get_f_raster_color.restype = c_int
    G_get_f_raster_color.argtypes = [POINTER(FCELL), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 265
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_d_raster_color'):
    G_get_d_raster_color = _libs['grass_gis.6.4.2RC2'].G_get_d_raster_color
    G_get_d_raster_color.restype = c_int
    G_get_d_raster_color.argtypes = [POINTER(DCELL), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 266
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_null_value_color'):
    G_get_null_value_color = _libs['grass_gis.6.4.2RC2'].G_get_null_value_color
    G_get_null_value_color.restype = c_int
    G_get_null_value_color.argtypes = [POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 267
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_default_color'):
    G_get_default_color = _libs['grass_gis.6.4.2RC2'].G_get_default_color
    G_get_default_color.restype = c_int
    G_get_default_color.argtypes = [POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 270
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_histogram_eq_colors'):
    G_make_histogram_eq_colors = _libs['grass_gis.6.4.2RC2'].G_make_histogram_eq_colors
    G_make_histogram_eq_colors.restype = c_int
    G_make_histogram_eq_colors.argtypes = [POINTER(struct_Colors), POINTER(struct_Cell_stats)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 271
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_histogram_log_colors'):
    G_make_histogram_log_colors = _libs['grass_gis.6.4.2RC2'].G_make_histogram_log_colors
    G_make_histogram_log_colors.restype = c_int
    G_make_histogram_log_colors.argtypes = [POINTER(struct_Colors), POINTER(struct_Cell_stats), c_int, c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 275
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_init_colors'):
    G_init_colors = _libs['grass_gis.6.4.2RC2'].G_init_colors
    G_init_colors.restype = c_int
    G_init_colors.argtypes = [POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 278
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__insert_color_into_lookup'):
    G__insert_color_into_lookup = _libs['grass_gis.6.4.2RC2'].G__insert_color_into_lookup
    G__insert_color_into_lookup.restype = c_int
    G__insert_color_into_lookup.argtypes = [CELL, c_int, c_int, c_int, POINTER(struct__Color_Info_)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 281
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_invert_colors'):
    G_invert_colors = _libs['grass_gis.6.4.2RC2'].G_invert_colors
    G_invert_colors.restype = c_int
    G_invert_colors.argtypes = [POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 284
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_lookup_colors'):
    G_lookup_colors = _libs['grass_gis.6.4.2RC2'].G_lookup_colors
    G_lookup_colors.restype = c_int
    G_lookup_colors.argtypes = [POINTER(CELL), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(c_ubyte), c_int, POINTER(struct_Colors)]
